[gd_scene load_steps=32 format=3 uid="uid://b11815068qu6w"]

[ext_resource type="Texture2D" uid="uid://572k26kjrx4f" path="res://assets/player/crouching.png" id="1_earxd"]
[ext_resource type="Script" uid="uid://cnfkiqxn5g1l0" path="res://scripts/player.gd" id="1_g721l"]
[ext_resource type="Texture2D" uid="uid://hi2h5jifwmkj" path="res://assets/player/falling.png" id="2_g721l"]
[ext_resource type="Texture2D" uid="uid://b8xiqoyg6fpx1" path="res://assets/player/hurting_0.png" id="3_hdt5j"]
[ext_resource type="Texture2D" uid="uid://bb473in317o1p" path="res://assets/player/hurting_1.png" id="4_i00hk"]
[ext_resource type="Texture2D" uid="uid://dp05t8gvm3c46" path="res://assets/player/hurting_2.png" id="5_ci3gn"]
[ext_resource type="Texture2D" uid="uid://b7hniuajsj7n6" path="res://assets/player/hurting_3.png" id="6_lyrcu"]
[ext_resource type="Texture2D" uid="uid://phh80fg05p6g" path="res://assets/player/jumping.png" id="7_xowrn"]
[ext_resource type="Texture2D" uid="uid://bkqxricg4sb23" path="res://assets/player/running_0.png" id="8_yc7v5"]
[ext_resource type="Texture2D" uid="uid://bfuumcnskktl4" path="res://assets/player/running_1.png" id="9_7vbt2"]
[ext_resource type="Texture2D" uid="uid://cyxjba6pbx1nt" path="res://assets/player/running_2.png" id="10_bkgyr"]
[ext_resource type="Texture2D" uid="uid://bvsj83ilbqq7o" path="res://assets/player/running_3.png" id="11_yduxl"]
[ext_resource type="Texture2D" uid="uid://cmdtccbkp70cp" path="res://assets/player/running_4.png" id="12_osejn"]
[ext_resource type="Texture2D" uid="uid://u8yxtgjk6aiy" path="res://assets/player/running_5.png" id="13_eymwt"]
[ext_resource type="Texture2D" uid="uid://ecssju4yeyp4" path="res://assets/player/running_6.png" id="14_1ak2f"]
[ext_resource type="Texture2D" uid="uid://e1rshl366qoj" path="res://assets/player/running_7.png" id="15_xv5sx"]
[ext_resource type="Texture2D" uid="uid://jljp33fbdy7r" path="res://assets/player/running_8.png" id="16_5016h"]
[ext_resource type="Texture2D" uid="uid://cbisy4s4gmbq8" path="res://assets/player/running_9.png" id="17_g1v67"]
[ext_resource type="Texture2D" uid="uid://kb1airid1yp8" path="res://assets/player/running_10.png" id="18_740re"]
[ext_resource type="Texture2D" uid="uid://cdybj7pt8osid" path="res://assets/player/running_11.png" id="19_maxqr"]
[ext_resource type="Texture2D" uid="uid://bjt8s1610fjtd" path="res://assets/player/standing.png" id="20_tepey"]
[ext_resource type="PackedScene" uid="uid://csgfeaponguv5" path="res://scenes/components/input_component.tscn" id="22_a38lo"]
[ext_resource type="AudioStream" uid="uid://bs0ng12xtodda" path="res://assets/general/jump.wav" id="22_dt7fs"]
[ext_resource type="Script" uid="uid://bbrh471n7qc63" path="res://scenes/components/gravity_component.gd" id="23_4ni07"]
[ext_resource type="Script" uid="uid://bgqr0acb2s0r2" path="res://scenes/components/movement_component.gd" id="24_ke2ow"]
[ext_resource type="PackedScene" uid="uid://obmxe68ujjlq" path="res://scenes/components/jump_component.tscn" id="25_pf23h"]
[ext_resource type="PackedScene" uid="uid://bta4hehbn6d3q" path="res://scenes/components/shoot_component.tscn" id="26_pf23h"]
[ext_resource type="Script" uid="uid://hw6dvwptfa7" path="res://scenes/components/animation_component.gd" id="27_31cv2"]
[ext_resource type="Script" uid="uid://0fcvhehdw8h4" path="res://scenes/components/hurt_component.gd" id="28_pf23h"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0eou4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_earxd")
}],
"loop": true,
"name": &"crouching",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_g721l")
}],
"loop": true,
"name": &"falling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_hdt5j")
}, {
"duration": 1.0,
"texture": ExtResource("4_i00hk")
}, {
"duration": 1.0,
"texture": ExtResource("5_ci3gn")
}, {
"duration": 1.0,
"texture": ExtResource("6_lyrcu")
}],
"loop": false,
"name": &"hurting",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_xowrn")
}],
"loop": true,
"name": &"jumping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_yc7v5")
}, {
"duration": 1.0,
"texture": ExtResource("9_7vbt2")
}, {
"duration": 1.0,
"texture": ExtResource("10_bkgyr")
}, {
"duration": 1.0,
"texture": ExtResource("11_yduxl")
}, {
"duration": 1.0,
"texture": ExtResource("12_osejn")
}, {
"duration": 1.0,
"texture": ExtResource("13_eymwt")
}, {
"duration": 1.0,
"texture": ExtResource("14_1ak2f")
}, {
"duration": 1.0,
"texture": ExtResource("15_xv5sx")
}, {
"duration": 1.0,
"texture": ExtResource("16_5016h")
}, {
"duration": 1.0,
"texture": ExtResource("17_g1v67")
}, {
"duration": 1.0,
"texture": ExtResource("18_740re")
}, {
"duration": 1.0,
"texture": ExtResource("19_maxqr")
}],
"loop": true,
"name": &"running",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_tepey")
}],
"loop": true,
"name": &"standing",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2q7xl"]
height = 28.0

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("input_component", "gravity_component", "movement_component", "jump_component", "shoot_component", "hurt_component", "animation_component")]
script = ExtResource("1_g721l")
input_component = NodePath("InputComponent")
gravity_component = NodePath("GravityComponent")
movement_component = NodePath("MovementComponent")
jump_component = NodePath("JumpComponent")
shoot_component = NodePath("ShootComponent")
hurt_component = NodePath("HurtComponent")
animation_component = NodePath("AnimationComponent")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_0eou4")
animation = &"standing"
autoplay = "running"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_2q7xl")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("22_dt7fs")

[node name="InputComponent" parent="." instance=ExtResource("22_a38lo")]

[node name="GravityComponent" type="Node" parent="."]
script = ExtResource("23_4ni07")

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("24_ke2ow")

[node name="JumpComponent" parent="." instance=ExtResource("25_pf23h")]

[node name="ShootComponent" parent="." instance=ExtResource("26_pf23h")]

[node name="AnimationComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("27_31cv2")
sprite = NodePath("../AnimatedSprite2D")

[node name="HurtComponent" type="Node" parent="."]
script = ExtResource("28_pf23h")
